[gd_scene load_steps=21 format=3 uid="uid://gamdhem1tgn8"]

[ext_resource type="Script" path="res://scripts/levels/fvl/fvl.gd" id="1_njb8i"]
[ext_resource type="Texture2D" uid="uid://csjj1utcqetbo" path="res://textures/fvl_background.png" id="2_3jp3k"]
[ext_resource type="PackedScene" uid="uid://dprbjqvu2al7c" path="res://scenes/player.tscn" id="3_ngxkv"]
[ext_resource type="PackedScene" uid="uid://ltped2ukoxcp" path="res://scenes/interaction_area.tscn" id="4_5n657"]
[ext_resource type="Script" path="res://scripts/levels/fvl/velitel_fvl.gd" id="4_xtjk3"]
[ext_resource type="PackedScene" uid="uid://2jcfnqfth2p7" path="res://scenes/bigo_snake/bigo_snake.tscn" id="5_jhyue"]
[ext_resource type="Texture2D" uid="uid://fap0bw5ikes1" path="res://images/npc_characters/velitel_fvl.png" id="5_li80f"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="5_oetfl"]
[ext_resource type="Resource" uid="uid://v072k1dahrh3" path="res://dialogues/velitel_fvl.tres" id="6_5jnte"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="6_6kl5r"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="7_j136s"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="8_o11n7"]
[ext_resource type="PackedScene" uid="uid://c7dtdy11356p2" path="res://scenes/user_interface.tscn" id="12_mw7g4"]
[ext_resource type="PackedScene" uid="uid://dahyokos7jqox" path="res://scenes/enemy.tscn" id="13_wxr2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mc11p"]
size = Vector2(304, 660)

[sub_resource type="CircleShape2D" id="CircleShape2D_wy8d7"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uhrxh"]
radius = 41.0122

[sub_resource type="RichTextEffect" id="RichTextEffect_3b4l1"]
script = ExtResource("6_6kl5r")

[sub_resource type="RichTextEffect" id="RichTextEffect_lw2ll"]
script = ExtResource("7_j136s")

[sub_resource type="RichTextEffect" id="RichTextEffect_0c0mt"]
script = ExtResource("8_o11n7")

[node name="fvl" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_njb8i")
default_position = Vector2(4000, 500)
camera_limit_bottom = 1080
camera_limit_right = 4800

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_3jp3k")
centered = false

[node name="sumavska_transition" type="Area2D" parent="."]
position = Vector2(4391, 127)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sumavska_transition"]
position = Vector2(142, 320)
shape = SubResource("RectangleShape2D_mc11p")

[node name="player" parent="." instance=ExtResource("3_ngxkv")]
position = Vector2(3980, 505)

[node name="velitel_fvl" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(318, 615)
collision_mask = 2
script = ExtResource("4_xtjk3")
texture = ExtResource("5_li80f")
dialogue_data = ExtResource("6_5jnte")
start_id = "START"
minigame = ExtResource("5_jhyue")

[node name="Sprite2D" type="Sprite2D" parent="velitel_fvl"]
y_sort_enabled = true
offset = Vector2(0, -90)

[node name="interaction_area" parent="velitel_fvl" instance=ExtResource("4_5n657")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_fvl/interaction_area"]
shape = SubResource("CircleShape2D_wy8d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_fvl"]
shape = SubResource("CircleShape2D_uhrxh")

[node name="CanvasLayer" type="CanvasLayer" parent="velitel_fvl"]

[node name="DialogueBox" type="Panel" parent="velitel_fvl/CanvasLayer"]
visible = false
z_index = 3
offset_left = 460.0
offset_top = 808.0
offset_right = 1460.0
offset_bottom = 1064.0
script = ExtResource("5_oetfl")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_3b4l1"), SubResource("RichTextEffect_lw2ll"), SubResource("RichTextEffect_0c0mt")])

[node name="user_interface" parent="." instance=ExtResource("12_mw7g4")]

[node name="enemy1" parent="." instance=ExtResource("13_wxr2c")]
position = Vector2(1278, 229)

[node name="enemy2" parent="." instance=ExtResource("13_wxr2c")]
position = Vector2(2328, 969)

[node name="enemy3" parent="." instance=ExtResource("13_wxr2c")]
position = Vector2(3332, 145)

[node name="boundaries" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boundaries"]
polygon = PackedVector2Array(0, 240, 4304, 240, 4384, 352, 4384, 56, 4680, 504, 4664, 840, 4800, 1080, 0, 1080, 0, 248, -8, 248, -8, 1088, 4808, 1088, 4808, 0, -8, 0, -8, 248, 0, 248)

[connection signal="body_entered" from="sumavska_transition" to="." method="_on_sumavska_transition_body_entered"]
[connection signal="dialogue_signal" from="velitel_fvl/CanvasLayer/DialogueBox" to="velitel_fvl" method="_on_dialogue_signal"]
